fix dict navnbar overflow issue

--- a/apps/sps-ordbokene-web/assets/css/tailwind.css
+++ b/apps/sps-ordbokene-web/assets/css/tailwind.css
@@ -27,7 +27,7 @@
 
     main {
         flex: 1;
-        @apply lg:pt-2 xl:pt-4 px-1 sm:px-8 xl:px-4 pb-8;
+        @apply lg:pt-2 xl:pt-4 xl:px-1 sm:px-8 xl:px-4 pb-8;
     }
 
     h1 {
